@@ -12,46 +12,26 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.4.RELEASE</version>
+		<version>2.0.0.RELEASE</version>
 	</parent>
 
 	<properties>
-		<jackson.version>2.9.1</jackson.version>
+		<jackson.version>2.9.2</jackson.version>
 		<swagger.version>2.7.0</swagger.version>
-		<guava.version>18.0</guava.version>
+		<guava.version>23.0</guava.version>
 		<slf4j.version>1.7.25</slf4j.version>
 		<hamcrest.version>1.3</hamcrest.version>
-		<powermock.version>1.7.1</powermock.version>
 		<junit.version>4.12</junit.version>
 		<newrelic.version>4.2.0</newrelic.version>
 		<maven.compile.source>1.8</maven.compile.source>
 		<maven.compile.target>1.8</maven.compile.target>
-		<surefireArgLine />
+		<surefireArgLine>-Xmx1024m -XX:MaxPermSize=256m</surefireArgLine>
 	</properties>
-
-	<reporting>
-		<plugins>
-			<plugin>
-				<!-- use mvn cobertura:cobertura to generate cobertura reports -->
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>cobertura-maven-plugin</artifactId>
-				<configuration>
-					<aggregate>true</aggregate>
-				</configuration>
-				<reportSets>
-					<reportSet>
-						<reports>
-							<report>cobertura</report>
-						</reports>
-					</reportSet>
-				</reportSets>
-			</plugin>
-		</plugins>
-	</reporting>
 
 	<modules>
 		<module>spring-boot-hello-world-core</module>
 		<module>spring-boot-hello-world-app</module>
+		<module>spring-boot-hello-world-jacoco-report-aggregator</module>
 	</modules>
 
 	<dependencyManagement>
@@ -74,7 +54,7 @@
 			<dependency>
 				<groupId>javax.servlet</groupId>
 				<artifactId>javax.servlet-api</artifactId>
-				<version>3.0.1</version>
+				<version>4.0.0</version>
 			</dependency>
 
 			<dependency>
@@ -94,7 +74,7 @@
 			<dependency>
 				<groupId>org.mockito</groupId>
 				<artifactId>mockito-core</artifactId>
-				<version>2.8.9</version>
+				<version>2.11.0</version>
 				<exclusions>
 					<exclusion>
 						<artifactId>hamcrest-core</artifactId>
@@ -103,19 +83,6 @@
 				</exclusions>
 				<scope>test</scope>
 			</dependency>
-
-			<dependency>
-				<groupId>org.powermock</groupId>
-				<artifactId>powermock-module-junit4</artifactId>
-				<version>${powermock.version}</version>
-				<scope>test</scope>
-			</dependency>
-			<dependency>
-				<groupId>org.powermock</groupId>
-				<artifactId>powermock-api-mockito2</artifactId>
-				<version>${powermock.version}</version>
-				<scope>test</scope>
-		   </dependency>
 
 			<dependency>
 				<groupId>org.hamcrest</groupId>
@@ -223,19 +190,19 @@
 			<dependency>
 				<groupId>commons-logging</groupId>
 				<artifactId>commons-logging</artifactId>
-				<version>1.1.3</version>
+				<version>1.2</version>
 			</dependency>
 
 			<dependency>
 				<groupId>commons-codec</groupId>
 				<artifactId>commons-codec</artifactId>
-				<version>1.10</version>
+				<version>1.11</version>
 			</dependency>
 
 			<dependency>
 				<groupId>commons-io</groupId>
 				<artifactId>commons-io</artifactId>
-				<version>2.4</version>
+				<version>2.6</version>
 			</dependency>
 
 			<!-- swagger -->
@@ -263,30 +230,15 @@
 			</dependency>
 
 			<!-- our stupid squad parent has guava at wrong version, so override it: -->
-			<dependency>
+			<!-- <dependency>
 				<groupId>com.google.guava</groupId>
 				<artifactId>guava</artifactId>
 				<version>${guava.version}</version>
 				<scope>compile</scope>
-			</dependency>
-
-			<dependency>
-				<groupId>com.newrelic.agent.java</groupId>
-				<artifactId>newrelic-api</artifactId>
-				<version>${newrelic.version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>com.newrelic.agent.java</groupId>
-				<artifactId>newrelic-java</artifactId>
-				<version>${newrelic.version}</version>
-				<scope>provided</scope>
-				<type>zip</type>
-			</dependency>
+			</dependency> -->
 
 		</dependencies>
 	</dependencyManagement>
-
 
 	<build>
 		<pluginManagement>
@@ -296,53 +248,52 @@
 					<artifactId>maven-jar-plugin</artifactId>
 					<version>3.0.2</version>
 				</plugin>
-				<plugin>
+				<!-- <plugin>
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>build-helper-maven-plugin</artifactId>
 					<version>3.0.0</version>
-				</plugin>
-				<plugin>
+				</plugin> -->
+				<!-- <plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-antrun-plugin</artifactId>
 					<version>1.8</version>
-				</plugin>
+				</plugin> -->
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-failsafe-plugin</artifactId>
-					<version>2.20.1</version>
+					<version>3.0.0-M1</version>
 				</plugin>
-				<plugin>
+				<!-- <plugin>
 					<groupId>org.codehaus.cargo</groupId>
 					<artifactId>cargo-maven2-plugin</artifactId>
 					<version>1.6.4</version>
-				</plugin>
-				<plugin>
+				</plugin> -->
+				<!-- <plugin>
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>exec-maven-plugin</artifactId>
 					<version>1.6.0</version>
-				</plugin>
-				<plugin>
+				</plugin> -->
+				<!-- <plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-dependency-plugin</artifactId>
 					<version>3.0.2</version>
 					<configuration>
 						<overWriteSnapshots>true</overWriteSnapshots>
 						<overWriteReleases>true</overWriteReleases>
-						<excludeGroupIds>com.ibm.g11n</excludeGroupIds>
 					</configuration>
-				</plugin>
+				</plugin> -->
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
 					<!-- Do NOT use version 2.12. See http://stackoverflow.com/questions/9531219/maven-surefire-2-12-does-not-run-a-specific-test-using-dtest-parameter -->
-					<version>2.18.1</version>
+					<version>3.0.0-M1</version>
 					<configuration>
 						<systemProperties>
 							<java.awt.headless>true</java.awt.headless>
 						</systemProperties>
 					</configuration>
 				</plugin>
-				<plugin>
+				<!-- <plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-war-plugin</artifactId>
 					<version>3.1.0</version>
@@ -355,7 +306,6 @@
 								<filtering>true</filtering>
 								<directory>src/main/webapp</directory>
 								<includes>
-									<!-- include any other file types you want to filter -->
 									<include>**/*.html</include>
 									<include>**/*.css</include>
 									<include>**/*.js</include>
@@ -374,7 +324,7 @@
 							</resource>
 						</webResources>
 					</configuration>
-				</plugin>
+				</plugin> -->
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
@@ -387,6 +337,10 @@
 						<encoding>UTF-8</encoding>
 						<showDeprecation>true</showDeprecation>
 						<showWarning>true</showWarning>
+						<compilerArgs>
+                <arg>-Xlint:unchecked</arg> <!-- i couldn't get "all" to work so set it for unchecked now, warnings not showing -->
+                <arg>-Werror</arg>
+            </compilerArgs>
 					</configuration>
 				</plugin>
 				<plugin>
@@ -397,68 +351,35 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-pmd-plugin</artifactId>
-					<version>3.6</version>
+					<version>3.11.0</version>
 				</plugin>
 				<plugin>
-					<groupId>org.codehaus.mojo</groupId>
-					<artifactId>cobertura-maven-plugin</artifactId>
-					<version>2.7</version>
+					<groupId>org.jacoco</groupId>
+					<artifactId>jacoco-maven-plugin</artifactId>
+					<version>0.8.2</version>
 				</plugin>
-				<!--This plugin's configuration is used to store Eclipse m2e settings
-					only. It has no influence on the Maven build itself. -->
-				<plugin>
-					<groupId>org.eclipse.m2e</groupId>
-					<artifactId>lifecycle-mapping</artifactId>
-					<version>1.0.0</version>
-					<configuration>
-						<lifecycleMappingMetadata>
-							<pluginExecutions>
-								<pluginExecution>
-									<pluginExecutionFilter>
-										<groupId>
-											org.apache.maven.plugins
-										</groupId>
-										<artifactId>
-											maven-checkstyle-plugin
-										</artifactId>
-										<versionRange>
-											[2.17,)
-										</versionRange>
-										<goals>
-											<goal>check</goal>
-										</goals>
-									</pluginExecutionFilter>
-									<action>
-										<ignore />
-									</action>
-								</pluginExecution>
-
-							</pluginExecutions>
-						</lifecycleMappingMetadata>
-					</configuration>
-				</plugin>
-				<plugin>
+				<!-- <plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-clean-plugin</artifactId>
 					<version>3.0.0</version>
-				</plugin>
-				<plugin>
+				</plugin> -->
+				<!-- <plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-assembly-plugin</artifactId>
 					<version>2.6</version>
-				</plugin>
+				</plugin> -->
 			</plugins>
 		</pluginManagement>
 
 		<plugins>
-			<plugin>
+			<!-- <plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-deploy-plugin</artifactId>
 				<version>2.8.2</version>
 				<configuration>
 					<deployAtEnd>true</deployAtEnd>
 				</configuration>
-			</plugin>
+			</plugin> -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
@@ -494,7 +415,10 @@
 				<version>3.0.5</version>
 				<configuration>
 					<xmlOutput>true</xmlOutput>
-					<excludeFilterFile>findbugs-exclude.xml</excludeFilterFile>
+					<!-- turn findbugs up to 11 with effort Max and threshold Low
+					<effort>Max</effort>
+					<threshold>Low</threshold>
+					<xmlOutput>true</xmlOutput> -->
 				</configuration>
 				<executions>
 					<execution>
@@ -506,25 +430,66 @@
 				</executions>
 			</plugin>
 			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>cobertura-maven-plugin</artifactId>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
 				<configuration>
-					<instrumentation>
-						<includes>
-							<include>com/ibm/**/*.class</include>
-						</includes>
-					</instrumentation>
-					<check>
-						<haltOnFailure>false</haltOnFailure>
-						<totalLineRate>0</totalLineRate>
-						<totalBranchRate>0</totalBranchRate>
-					</check>
+					<dataFile>${project.build.directory}/jacoco.exec</dataFile>
+					<outputDirectory>${project.build.directory}/site</outputDirectory>
+					<rules>
+						<rule>
+							<element>BUNDLE</element>
+							<limits>
+								<limit>
+									<counter>LINE</counter>
+									<value>COVEREDRATIO</value>
+									<minimum>1.00</minimum>  <!-- force child modules to explictly configure jacoco -->
+								</limit>
+								<limit>
+									<counter>BRANCH</counter>
+									<value>COVEREDRATIO</value>
+									<minimum>1.00</minimum>  <!-- force child modules to explictly configure jacoco -->
+								</limit>
+								<limit>
+									<counter>CLASS</counter>
+									<value>COVEREDRATIO</value>
+									<minimum>1.00</minimum>  <!-- force child modules to explictly configure jacoco -->
+								</limit>
+								<limit>
+									<counter>INSTRUCTION</counter>
+									<value>COVEREDRATIO</value>
+									<minimum>1.00</minimum>  <!-- force child modules to explictly configure jacoco -->
+								</limit>
+								<limit>
+									<counter>COMPLEXITY</counter>
+									<value>COVEREDRATIO</value>
+									<minimum>1.00</minimum>  <!-- force child modules to explictly configure jacoco -->
+								</limit>
+								<limit>
+									<counter>METHOD</counter>
+									<value>COVEREDRATIO</value>
+									<minimum>1.00</minimum>  <!-- force child modules to explictly configure jacoco -->
+								</limit>
+							</limits>
+						</rule>
+					</rules>
 				</configuration>
 				<executions>
 					<execution>
+						<id>jacoco-pre-unit-test</id>
 						<goals>
-							<goal>clean</goal>
+							<goal>prepare-agent</goal>
+						</goals>
+						<configuration>
+							<propertyName>jacocoArgLine</propertyName>
+							<destFile>${project.build.directory}/jacoco.exec</destFile>
+						</configuration>
+					</execution>
+					<execution>
+						<id>post-unit-test</id>
+						<phase>test</phase>
+						<goals>
 							<goal>check</goal>
+							<goal>report</goal>
 						</goals>
 					</execution>
 				</executions>
@@ -532,8 +497,14 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M1</version>
 				<configuration>
-					<argLine>${surefireArgLine}</argLine>
+					<systemProperties>
+						<java.awt.headless>true</java.awt.headless>
+					</systemProperties>
+					<forkCount>3</forkCount>
+					<reuseForks>true</reuseForks>
+					<argLine>${surefireArgLine} ${jacocoArgLine}</argLine>
 				</configuration>
 			</plugin>
 		</plugins>
